Fix overflow

--- a/src/components/SearchBox.css
+++ b/src/components/SearchBox.css
@@ -9,7 +9,7 @@
     display:grid;
     margin: 0 auto;
     max-width:1000px;
-    padding: 30px;
+    padding: 10px;
 }
 
 .label {
